fix(tests): improve worker manager tests